Add general handler for last.fm errors

InvalidSessionKey handled specifically and user is notified, other errors don't
look like having any specific handling for them is necessary.

BUG: 327547